# Chronos

./: .dockerignore  .env.seed.example  .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  Dockerfile  ERROR_HANDLING_ANALYSIS.md  FAQ.md  GEMINI.md  GENESIS_HASH_EXPLAINED.md  GENESIS_HASH_EXPLAINED_EN.md  GENESIS_HASH_QUICKREF.md  GENESIS_HASH_SUMMARY_NL.md  GENESIS_HASH_VISUAL.md  IMPLEMENTATION_ROADMAP.md  README-DOCKER.md  README.md  Repository.md  SECURE_TIME_DESIGN.md  SECURITY_STRIDE_ANALYSIS.md  Stride.md  TODO.md  TODO_Wallet.md  UPGRADABILITY_STRATEGY.md  USER_MANUAL.md  bundel.py  chronos_full_context.txt  docker-compose.seed.yml  docker-compose.yml  docker-entrypoint-seed.sh  docker-entrypoint.sh  genesis_key.txt  instructies.md
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  codeql-analysis.yml  memory-check.yml
Testing/Temporary/: CTestCostData.txt
config/: default.toml  node.toml  seed.toml  tailscale-serve.json
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  FAQ.md  IMPLEMENTATION_ROADMAP.md  README.md
docs/api/: Index_API.md  Node_CLI_Reference.md  Wallet_CLI_Reference.md
docs/architecture/: Index_Architecture.md  Network_Layer.md  Storage_Layer.md
docs/consensus/: BFT_Mechanisms.md  Index_Consensus.md  Proof_of_Time.md  Transaction_Validation.md
docs/cryptography/: Index_Cryptography.md  P2P_Encryption.md  Post_Quantum_Signatures.md
include/util/: logging_config.hpp
proto/: bft_messages.proto  ledger.proto  p2p_messages.proto
src/: main.cpp
src/address/: address.cpp  address.hpp  bech32m.cpp  bech32m.hpp
src/consensus/: AtomicClockBackend.cpp  AtomicClockBackend.hpp  ChronyBackend.cpp  ChronyBackend.hpp  ITimeSyncBackend.hpp  QuantumClockBackend.cpp  QuantumClockBackend.hpp  beacon_engine.cpp  beacon_engine.hpp  bft.cpp  bft.hpp  bft_messages.hpp  external_time_source_manager.cpp  external_time_source_manager.hpp  ntp_client.cpp  ntp_client.hpp  pot_aggregator.cpp  pot_aggregator.hpp
src/crypto/: aes_crypto.cpp  aes_crypto.hpp  blake3.cpp  blake3.hpp  crypto_provider.cpp  crypto_provider.hpp  key_manager.cpp  key_manager.hpp  kyber_crypto.cpp  kyber_crypto.hpp  post_quantum.hpp  signature.hpp  signer.cpp  signer.hpp  signer_dilithium.cpp  signer_dilithium.hpp  signer_hmac.cpp  signer_hmac.hpp
src/hardware/: time_oracle.hpp
src/ledger/: block.cpp  block.hpp  fees.hpp  node_registry.cpp  node_registry.hpp  smart_account.hpp  state.cpp  state.hpp  state_extension.cpp  transaction.cpp  transaction.hpp  types.hpp
src/node/: config.cpp  config.hpp  node_app.cpp  node_app.hpp  node_app_extension.cpp  node_status.hpp
src/p2p/: discovery_manager.cpp  discovery_manager.hpp  fragmentation.cpp  fragmentation.hpp  gossip.cpp  gossip.hpp  p2p_client.cpp  p2p_client.hpp  p2p_server.cpp  p2p_server.hpp  peer_manager.cpp  peer_manager.hpp  peer_store.cpp  peer_store.hpp  socket_transport.cpp  socket_transport.hpp  transport.hpp
src/proto/: bft_messages.pb.cc  bft_messages.pb.h  ledger.pb.cc  ledger.pb.h  p2p_messages.pb.cc  p2p_messages.pb.h
src/rpc/: handlers.cpp  jsonrpc.cpp  jsonrpc.hpp
src/storage/: DiskBlockchainStorage.cpp  DiskBlockchainStorage.hpp  IBlockchainStorage.hpp  IKv.hpp  LevelDBBlockchainStorage.cpp  LevelDBBlockchainStorage.hpp  MemoryBlockchainStorage.cpp  MemoryBlockchainStorage.hpp  file_kv.cpp  file_kv.hpp  kv.hpp  memory_kv.cpp  memory_kv.hpp  snapshots.cpp  snapshots.hpp
src/tools/: genesis_tool.cpp  node_cli.cpp
src/util/: bytes.cpp  bytes.hpp  codec.hpp  console_display.cpp  console_display.hpp  error_types.cpp  error_types.hpp  log.cpp  log.hpp  retry_policy.cpp  retry_policy.hpp  system_lock.hpp
src/wallet/cli/: CMakeLists.txt  Genesis Dillitium Key.txt  main.cpp  node_connector.cpp  node_connector.hpp
test_data/robust_integration/node_0/: chronos_state.kv  peers.json
test_data/robust_integration/node_0/keys/: validator.key  validator.pub
test_data/robust_integration/node_1/: peers.json
test_data/robust_integration/node_1/keys/: validator.key  validator.pub
test_data/robust_integration/node_2/: peers.json
test_data/robust_integration/node_2/keys/: validator.key  validator.pub
test_integration_data/keys/: test-validator-0.key  test-validator-0.pub  test-validator-1.key  test-validator-1.pub  test-validator-2.key  test-validator-2.pub
test_integration_data/node0/: chronos_state.kv
test_integration_data/node2/: chronos_state.kv
tests/: dummy_test.cpp  test_address.cpp  test_bft.cpp  test_bft_integration.cpp  test_enhanced_tx_validation.cpp  test_error_types.cpp  test_framework.cpp  test_framework.hpp  test_full_integration_executable.cpp  test_genesis.cpp  test_integration_full.cpp  test_integration_only.cpp  test_key_rotation.cpp  test_ledger.cpp  test_logging_config.cpp  test_merkle_root.cpp  test_new_features.cpp  test_node_storage.cpp  test_p2p_encryption.cpp  test_pot.cpp  test_protobuf_validation.cpp  test_retry_policy.cpp  test_robust_integration.cpp  test_rpc.cpp  test_snapshots.cpp  test_state_serialization.cpp  test_thread_safety.cpp  test_transaction_validation.cpp
tools/: network_visualizer.py  quickstart.sh
wallet/cli/: chronos_wallet.py
